[dataTable] fix z-index [tag] fix position relative (#3967)

--- a/packages/scss/src/components/tag/component.scss
+++ b/packages/scss/src/components/tag/component.scss
@@ -19,6 +19,8 @@
 	font: var(--components-tag-font);
 	font-size: var(--components-tag-fontSize); // Deprecated
 	line-height: var(--components-tag-lineHeight); // Deprecated
+	max-inline-size: 100%;
+	position: var(--components-tag-position);
 
 	&,
 	&:is(a, button) {
